# Copter_mavlink_companion_control

./: CMakeLists.txt  LICENSE  README.md  makefile  mav.parm  mavlink_control.cpp  mavlink_control.h
artag-try/: CMakeLists.txt  GeometryTypes.cpp  GeometryTypes.h  Marker.cpp  Marker.h  MarkerDetector.cpp  MarkerDetector.h  main.cpp
detect/: CMakeLists.txt  Marker.cpp  MarkerDetector.cpp  MarkerDetector.h  fire_recognition.cpp  fire_recognition.h
interface/: CMakeLists.txt  autopilot_interface.cpp  autopilot_interface.h
serial/: CMakeLists.txt
